fixed background scroll w/ overflow: hidden

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -227,6 +227,7 @@
   top: 0px;
   left: 0px;
   position: absolute;
+  overflow: hidden;
 }
 
 .balance-container {
